# optimization-algorithms

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
optimization-algorithms/golden-section/: GoldenSection.hpp  GoldenSection.test.cpp
optimization-algorithms/nelder-mead/: NelderMead.hpp  NelderMead.test.cpp
optimization-algorithms/particle-swarm/: ParticleSwarm.hpp  ParticleSwarm.test.cpp
